<resources>
    <string name="app_name">FeedbApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="band_introduction">y somos una banda de tributo a los clásicos del rock en inglés, desde los 60\'s hasta los 90\'s (y un poquito más). Buscamos traerte la nostalgia de la música que ha llegado para quedarse y divertirnos mucho mientras presentamos nuestro show en tu evento.\n\n ¿Quieres saber quiénes integran la banda? 👇🏼👀 </string>
    <string name="zed_introduction">Soy originario de Baja California la bella, me encanta la música y el arte, tener buenas compañías y conversaciones. Me encantan los animales y los paisajes. Mi hobbie es ser barista 🥂.</string>
    <string name="chuy_introduction">Me encanta el mar, disfruto componer música, fan de las buenas charlas con un buen vino. Disfruto mucho enseñar a las personas a desarrollar sus habilidades académicas y musicales, amo los perros y me hace falta tiempo para un hobbie 📖.</string>
    <string name="guma_introduction">Me encanta escuchar y sentir la música así como componerla y producirla. Soy aficionado de los E-Sports, los buenos memes y me gusta mucho pasar tiempo en familia 🎮</string>
    <string name="rei_introduction">Soy melómano empedernido, amo viajar y conocer lugares en mi moto, disfrutar tiempo con mi familia y amigos, me gustan las artes marciales y mi hobbie es el desarrollo de software 🍏.</string>
</resources>