<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.IntroductionFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_greeting"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="¡Hola! Nosotros somos"
            android:gravity="center"
            android:textSize="@dimen/screen_header"
            />

        <ImageView
            android:id="@+id/iv_band_logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:src="@drawable/logo_feedback"
            android:layout_below="@id/tv_greeting"/>

        <TextView
            android:id="@+id/tv_band_introduction"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/band_introduction"
            android:gravity="center"
            android:layout_below="@id/iv_band_logo"
            android:textSize="@dimen/screen_header"/>

        <!--Zed-->
        <LinearLayout
            android:id="@+id/zed"
            android:background="@color/zed_introduction_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/tv_band_introduction">

            <LinearLayout
                android:id="@+id/zed_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/img_zed"
                    app:riv_oval="true"
                    android:scaleType="centerCrop"
                    android:outlineAmbientShadowColor="@color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp">

                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="Zed"
                        android:gravity="center"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Bajista y vocalista"
                        android:textSize="28sp"
                        android:textStyle="italic"/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/zed_introduction"
                android:textSize="@dimen/members_introduction_text_size"
                android:textColor="@color/black"/>
        </LinearLayout>

        <!--Chuy-->
        <LinearLayout
            android:id="@+id/chuy"
            android:background="@color/chuy_introduction_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/zed">

            <LinearLayout
                android:id="@+id/chuy_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:layout_weight="1">

                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="Chuy"
                        android:gravity="center"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Baterista"
                        android:textSize="28sp"
                        android:textStyle="italic"/>
                </LinearLayout>

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/img_chuy"
                    android:layout_gravity="right"
                    app:riv_oval="true"
                    android:scaleType="centerCrop" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/chuy_introduction"
                android:textSize="@dimen/members_introduction_text_size"
                android:textColor="@color/black" />
        </LinearLayout>

        <!--Guma-->
        <LinearLayout
            android:id="@+id/guma"
            android:background="@color/guma_introduction_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/chuy">

            <LinearLayout
                android:id="@+id/guma_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/img_guma"
                    app:riv_oval="true"
                    android:scaleType="centerCrop"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp">

                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="Guma"
                        android:gravity="center"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Tecladista, guitarrista y vocalista"
                        android:textSize="28sp"
                        android:textStyle="italic"/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/guma_introduction"
                android:textSize="@dimen/members_introduction_text_size"
                android:textColor="@color/black"/>
        </LinearLayout>

        <!--Rei-->
        <LinearLayout
            android:id="@+id/rei"
            android:background="@color/rei_introduction_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/guma">

            <LinearLayout
                android:id="@+id/rei_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="Greñas"
                        android:gravity="center"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Guitarrista y vocalista"
                        android:textSize="28sp"
                        android:textStyle="italic"/>
                </LinearLayout>

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/img_rei"
                    android:layout_gravity="right"
                    app:riv_oval="true"
                    android:scaleType="centerCrop"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/rei_introduction"
                android:textSize="@dimen/members_introduction_text_size"
                android:textColor="@color/black"/>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>